--- a/client/src/components/TaskForm.css
+++ b/client/src/components/TaskForm.css
@@ -2,12 +2,12 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  max-width: 600px;
+  max-width: 500px;
   margin: 0 auto;
-  padding: 1.5rem;
+  padding: 1.8rem;
   border: 1px solid #334155; /* Bordure gris foncé */
   border-radius: 8px;
-  background-color: #1e293b; /* Fond sombre */
+  background-color: #4e5969; /* Fond sombre */
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.5);
   color: #f1f5f9; /* Texte clair */
 }
@@ -26,12 +26,12 @@
 }
 
 .task-form-input {
-  padding: 0.75rem;
+  padding: 0.8rem;
   font-size: 1rem;
-  border: 1px solid #475569; /* Bordure gris foncé */
+  border: 1px solid #79899f; /* Bordure gris foncé */
   border-radius: 4px;
-  background-color: #334155; /* Fond gris foncé */
-  color: #f1f5f9; /* Texte clair */
+  background-color: #b7caef; /* Fond gris foncé */
+  color: #021324; /* Texte clair */
   outline: none;
   transition: border-color 0.3s, box-shadow 0.3s;
 }
@@ -45,7 +45,7 @@
   padding: 0.75rem;
   font-size: 1rem;
   color: #fff;
-  background-color: #2563eb; /* Bleu pour le bouton */
+  background-color: #153c92; /* Bleu pour le bouton */
   border: none;
   border-radius: 4px;
   cursor: pointer;
@@ -53,7 +53,7 @@
 }
 
 .task-form-button:hover {
-  background-color: #1d4ed8; /* Bleu plus foncé au survol */
+  background-color: #2f57c8; /* Bleu plus foncé au survol */
   transform: scale(1.05);
 }
 
